--- a/pce/src/requirements.txt
+++ b/pce/src/requirements.txt
@@ -6,9 +6,17 @@ Pygments==2.0.2
 Sphinx==1.3.1
 alabaster==0.7.6
 argparse==1.2.1
+cffi==1.5.0
 configobj==5.0.6
+cryptography==1.2.1
 docutils==0.12
+enum34==1.1.2
+idna==2.0
+ipaddress==1.0.16
 nose==1.3.7
+pyOpenSSL==0.15.1
+pyasn1==0.1.9
+pycparser==2.14
 pycrypto==2.6.1
 pytz==2015.4
 requests==2.7.0
